2.9
---
* use poetry instead of pipenv
* BACKWARD INCOMPATIBLE: all `prp` endpoints to the source database moved to `sources/prp`
* BACKWARD INCOMPATIBLE: all `etools` endpoints to the source database moved to `sources/etools`
* BACKWARD INCOMPATIBLE: pagination cannot be disabled. Users can access full dataset using alternate endpoint.


2.8
---
* fixes #16623 - wrong visit_url in TPMActivity
* fixes Location / GtewayType Loaders


2.7
-----
* add dedicated check to prevent missing filter declaration
* fixes AuditResult `status` filter
* fixes some missing field filtering
* uses `python:3.6-slim-stretch` as base image


2.6
---
* updates requirements
* add `status` and `vendor_number` to AuditResult
* add `status` filter to AuditResult endpoint

2.5
---
* updates AuditResult
* fixes #15714
* fixes #15746


2.4
---
* new endpoint "datamart/audit/results"
* updates ActionPoint std serializer
* bug fixes
* admin improvements
* filtering improvements


2.3
---
* fixes lat/lng informations
* fixes Intervention.reference_number


2.2
---
* fixes InterventionBudgetLoader
* admin improvements
* improves indexing

2.1
---
* Fixes TripLoader
* add lat/lng info to datamart/interventions/
* add centroid/lat/lng info to datamart/locations/
* add extra filter to datamart/t2f/trips/
* add 'vendor_number' to datamart/audit/engagements
* add 'reference_number' to datamart/audit/engagements
* raise default timeout value


2.0
---
* add PRP source endpoints
* new attachments/attachment endpoint
* improves performance
* bug fixes
* server start as unprivileged user
* upgrade to python 3.7
* dependencies upgrade
* fixes Internet Explorer Content-Disposition issue that prevent file downloading


1.26
----
* fixes Intervention  endpoint


1.25
----
* restored `related_module_class` in ActionPoint
* fixes `partner_id` in Intervention


1.24
----
* improves Admin functionalities
* updates FundsReservation endpoints
* fixes FundsReservation ETL
* updates EtlTask management