@@ -2,5 +2,6 @@
 from .datamart import *  # noqa
 from .etools import *  # noqa
 from .openapi import schema_view  # noqa
+from .prp import *  # noqa
 from .system import *  # noqa
 from .unicef import *  # noqa
