@@ -1,0 +1,1 @@
+from .datareport import DataReportViewSet  # noqa
