@@ -3,7 +3,10 @@
 * use poetry instead of pipenv
 * BACKWARD INCOMPATIBLE: all `prp` endpoints to the source database moved to `sources/prp`
 * BACKWARD INCOMPATIBLE: all `etools` endpoints to the source database moved to `sources/etools`
-* BACKWARD INCOMPATIBLE: pagination cannot be disabled. Users can access full dataset using alternate endpoint.
+* Offline requests and File Exports.
+* new engagement-findings endpoint - ticket #17372
+* new endpoint audit/spotcheck - ticket #16739
+* new endpoint prp/data-report - ticket #16971
 
 
 2.8
